refactor: 글 작성/수정 리팩터링

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,8 @@
       {
         "vars": "all",
         "args": "after-used",
-        "ignoreRestSiblings": false
+        "ignoreRestSiblings": false,
+        "@typescript-eslint/no-empty-function": "off"
       }
     ]
   }
