design: 인터페이스 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,8 +65,7 @@
       {
         "vars": "all",
         "args": "after-used",
-        "ignoreRestSiblings": false,
-        "@typescript-eslint/no-empty-function": "off"
+        "ignoreRestSiblings": false
       }
     ]
   }
