--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,10 +41,12 @@
   "rules": {
     // 규칙을 하나하나 세세하게 제어하기 위해 사용 (보통 extends 옵션에 의해 설정된 규칙을 덮어쓰고 싶을 때 사용)
     "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": ["warn", { "extensions": [".ts", ".tsx"] }], // jsx 파일 확장자를 .ts, .tsx로 한정. 위반 시 경고(warn)
+    "react/jsx-filename-extension": [
+      "error",
+      { "extensions": [".ts", ".tsx"] }
+    ], // jsx 파일 확장자를 .ts, .tsx로 한정. 위반 시 경고(warn)
     "@typescript-eslint/camelcase": "off",
-    "import/extensions": ["error", "ignorePackages"], // 라이브러리 패키지는 제외하고 import문에 확장자 없을 시 에러. 에러시 수동수정 필요 (TypeScript에서는 확장자 붙이는 것을 권장)
-    "no-console": "error", // airbnb 규칙에선 no-console 규칙을 어기면 warn이나, error로 설정함.
+    "import/extensions": ["warn", "ignorePackages"], // 라이브러리 패키지는 제외하고 import문에 확장자 없을 시 에러. 에러시 수동수정 필요 (TypeScript에서는 확장자 붙이는 것을 권장)
     "prettier/prettier": [
       "warn",
       {
@@ -53,36 +55,88 @@
       }
     ],
     "no-underscore-dangle": "off",
+    "no-restricted-imports": [
+      "error",
+      {
+        "paths": [
+          {
+            "name": "react",
+            "importNames": ["default"]
+          }
+        ],
+        "patterns": []
+      }
+    ],
     "import/order": [
-      "warn",
+      "error",
       {
         "groups": [
-          ["builtin", "external"],
+          "builtin",
+          "external",
           "internal",
-          ["parent", "sibling", "index"]
+          "parent",
+          "sibling",
+          "index",
+          "object",
+          "type"
         ],
         "pathGroups": [
           {
             "pattern": "{react,react-*}",
-            "group": "builtin",
-            "position": "before"
+            "group": "builtin"
           },
           {
-            "pattern": "{common/**,components,components/**,store/**}",
+            "pattern": "{next/*}",
+            "group": "builtin"
+          },
+          {
+            "pattern": "{../layout/**,./layout/**}",
             "group": "internal",
             "position": "before"
           },
           {
-            "pattern": "{./components/**,**/config}",
-            "group": "internal"
+            "pattern": "{../shared/**,./shared/**}",
+            "group": "internal",
+            "position": "before"
           },
           {
-            "pattern": "{styles,./*.css,../*.css,./*.module.css,../*.module.css}",
-            "group": "index"
+            "pattern": "{../components/**,./components/**}",
+            "group": "internal",
+            "position": "before"
           },
           {
-            "pattern": "{assets/**/*.png,assets/*/*.jpg,assets/*/*.jpeg,assets/*/*.gif}",
-            "group": "index"
+            "pattern": "{../utils/**,./utils/**}",
+            "group": "index",
+            "position": "after"
+          },
+          {
+            "pattern": "{../types/**, ./types/**}",
+            "group": "type"
+          },
+          {
+            "pattern": "@/app/*.tsx",
+            "group": "unknown",
+            "position": "before"
+          },
+          {
+            "pattern": "@/app/layout/**",
+            "group": "unknown",
+            "position": "before"
+          },
+          {
+            "pattern": "@/app/shared/**",
+            "group": "unknown",
+            "position": "before"
+          },
+          {
+            "pattern": "@/app/utils/**",
+            "group": "unknown",
+            "position": "before"
+          },
+          {
+            "pattern": "@/app/types/**",
+            "group": "unknown",
+            "position": "after"
           }
         ],
         "pathGroupsExcludedImportTypes": ["react"],
