chore: defaultProps 삭제

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -67,6 +67,7 @@
         "patterns": []
       }
     ],
+    "react/require-default-props": "off",
     "import/order": [
       "error",
       {
