chore: 공통 컴포넌트 디렉터리 구조 변경

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -120,12 +120,12 @@
             "position": "before"
           },
           {
-            "pattern": "@/app/layout/**",
+            "pattern": "@/app/components/layout/**",
             "group": "index",
             "position": "before"
           },
           {
-            "pattern": "@/app/shared/**",
+            "pattern": "@/app/components/shared/**",
             "group": "index",
             "position": "before"
           },
