--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "clean": "rm -rf node_modules && npm install && npm run dev"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^10.0.0",
     "aws-sdk": "^2.1670.0",
     "axios": "^1.7.3",
+    "bcrypt": "^5.1.1",
     "date-fns": "^3.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "lottie-react": "^2.4.0",
     "md-editor-rt": "^4.17.4",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8",
