--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "md-editor-rt": "^4.17.4",
     "mongodb": "^6.8.0",
     "next": "14.2.5",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.20",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.8",
