--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "md-editor-rt": "^5.1.1",
     "mongodb": "^6.12.0",
     "next": "15.1.3",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sass": "^1.83.0",
