--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 8080",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint",
     "clean": "rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install"
   },
   "dependencies": {
     "axios": "^1.7.9",
-    "md-editor-rt": "^5.1.1",
+    "md-editor-rt": "^4.21.3",
     "mongodb": "^6.12.0",
-    "next": "15.1.3",
+    "next": "^14.2.22",
     "next-auth": "^5.0.0-beta.25",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.83.0",
     "swr": "^2.3.0",
     "timeago.js": "^4.0.2",
@@ -25,10 +25,10 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.3",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
