--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "clean": "rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "md-editor-rt": "^4.21.3",
     "mongodb": "^6.12.0",
     "next": "^14.2.22",
