feat: 프로필 이미지 Supabase 스토리지 연동

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf node_modules && rm -rf package-lock.json && npm cache clean --force && npm install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.47.10",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
