--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.47.10",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "md-editor-rt": "^4.21.3",
